objects/MMPJ_TOPG_Partner__c.object
<CustomObject>
    <description>Used for MMPJ TopGun app</description>
    <fields>
        <fullName>MMPJ_TOPG_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>MMPJ_TOPG_Brand__c</referenceTo>
        <relationshipName>Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>MMPJ_TOPG_Market__c</referenceTo>
        <relationshipName>Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_ParentPartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Partner</label>
        <referenceTo>MMPJ_TOPG_Partner__c</referenceTo>
        <relationshipName>Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_PartnerType__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Bar tender</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Importer</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>State Monopoly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Distribution Partner</label>
    <listViews>
        <fullName>MMPJ_TOPG_All_Distribution_Partners</fullName>
        <columns>NAME</columns>
        <columns>MMPJ_TOPG_Market__c</columns>
        <columns>MMPJ_TOPG_PartnerType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>